--- a/doc/1.flex布局.md
+++ b/doc/1.flex布局.md
@@ -1,3 +1,115 @@
 # 小程序中的Flex布局
 
 我们在小程序中使用最多的组件就是 `<view />` 。这是一个类似于div的块级元素，默认会独占一行，就算是设置了 `width` 。如果我们想既让view可以排在一行【行内元素】，而行内元素又不能设置宽度【又可以让行内元素可以设置宽度】，在PC端的做法是 `display: inline-block	`。而在小程序中，我们可以使用 `flex` 布局，就能实现这种效果。
+
+## 基本概念
+
+而flex布局有两个基本概念：`flex container`   `flex item`  这也就是说你要使用flex弹性布局，首先是一个container容器包裹子元素，让子元素呈现flex布局。
+
+```html
+<view class="container">
+    <view class="chunk color1"></view>
+    <view class="chunk color2"></view>
+    <view class="chunk color3"></view>
+</view>
+```
+
+```css
+.container {
+    display: flex
+}
+.chunk {
+    width: 100px;
+    height: 100px;
+}
+```
+
+这样的效果和使用 `inline-block` 的效果一致。
+
+## 基本设置
+
+上面的效果是让3个色块排列在一行，如果我们现在想让这3个色块纵向排布，怎么办？
+
+```css
+.container {
+    display: flex;
+    flex-direction: column; 
+}
+```
+
+`column` 是一列，列分布。指明主轴排列方向就会让元素按照该方向排布。
+
+### flex-direction
+
+控制flex-item的排列方向：
+
+- `row（row-reverse）`：行（行逆置）
+- `column（column-reverse）`：列（列逆置）
+
+对于逆置这里说明一下：小程序中容器默认会充满整个宽度，高度会自适应【前提是没有设置高度】。逆置这种不仅会让顺序逆置，位置也会出现偏移【顶在容器的顶端】（可能左对齐到右对齐）。
+
+### justify-content
+
+控制flex-item的对齐方向：
+
+- `flex-start`
+- `flex-end`
+- `center`：居中排列
+- `space-between`：平均分布，左右靠顶边
+- `space-around`：等距分布，每一个flex-item的左右边距全是一样的
+
+### 主轴与交叉轴
+
+之前一直实现的效果都是在排列方向上的居中分布，现在如果想要在整个容器上居中分布，怎么实现？
+
+这个就涉及到 `align-items` 。`align-items: cneter` 这个就可以实现在水平居中，垂直也居中。同时这个和前面的 `justify-content` 有什么区别？
+
+区别在于方向，这个就涉及到主轴和交叉轴。
+
+**`flex-direction` 指明的方向就是主轴向**，与这个方向垂直的方向就是交叉轴方向【`flex-direction: column ` 主轴就是列，交叉轴就是行】。而 `align-items` 方向就是交叉轴方向。
+
+【思维过程】
+
+1. 先明确自己需要在哪个方向上进行对齐调整
+2. 然后明确当前方向是主轴还是交叉轴
+
+需要注意的是：reverse在direction上的改变，其实方向上没什么改变，只是向左还是向右。
+
+- `strench`：在高度被限制的情况下不会正常伸展
+- `baseline`：让子元素里的文字以第一个块对齐
+
+### 换行
+
+flex布局默认是宽度自己计算的，也就是说就算你自己设置了宽度，在需要换行的时候它也会默认为一行排布。所以你要换行：`flex-wrap: wrap`  。
+
+但是在换行之后会出现一个问题就是边距：
+
+<img src="https://raw.githubusercontent.com/hanxuanliang/PicGo/master/flex%E4%B8%AD%E7%9A%84%E6%8D%A2%E8%A1%8C%E6%9C%89%E8%BE%B9%E8%B7%9D.jpg" style="zoom:80%;" />
+
+这个问题应该如何解决？
+
+既然有边距，高度自适应，我们是不是可以设置高度呢？将高度限制，这样就可以把边距消除：
+
+```css
+.container {
+    display: flex;
+    height: 200px;
+    flex-wrap: wrap;
+    flex-direction: row-reverse;
+    jusitfy-content: center;
+    align-items: flex-start;
+}
+```
+
+## 总结
+
+`flex-direaction`：
+![](https://raw.githubusercontent.com/hanxuanliang/PicGo/master/flex%E4%B8%AD%E7%9A%84justify-content.jpg)
+
+`align-items`：
+
+![](https://raw.githubusercontent.com/hanxuanliang/PicGo/master/flex%E4%B8%AD%E7%9A%84align-items.jpg)
+
+`flex-wrap`：
+
+![](https://raw.githubusercontent.com/hanxuanliang/PicGo/master/flex%E4%B8%AD%E7%9A%84flex-wrap.jpg)
